[gd_scene load_steps=20 format=4 uid="uid://cqmve3csh45xs"]

[ext_resource type="Texture2D" uid="uid://cv5jjm0bi86p1" path="res://assets/tileset/nonsensical2D/grass.png" id="1_dnwfw"]
[ext_resource type="Texture2D" uid="uid://dw0ky23o7ejed" path="res://assets/tileset/rock1/Tilemap_AutoTile_128.png" id="2_01rbm"]
[ext_resource type="PackedScene" uid="uid://dbgx4ax7pfj8o" path="res://src/ikrig/gbot/gbot_anim.tscn" id="3_r70sj"]
[ext_resource type="Script" path="res://src/tileset/polygon_2d.gd" id="4_xiubp"]
[ext_resource type="Script" path="res://src/tileset/polygon_2d_2.gd" id="5_4uunn"]
[ext_resource type="Script" path="res://src/tileset/area_teleport_start.gd" id="6_hjedw"]
[ext_resource type="PackedScene" uid="uid://bpcirevnh8m1e" path="res://src/ui/animation_componenet.tscn" id="7_kg2a7"]
[ext_resource type="Script" path="res://src/ui/menu.gd" id="8_80gbj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_upn4i"]
texture = ExtResource("1_dnwfw")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-29, -22, 64, -27, 64, 32, 36, 64, -28, 64)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 21, -64, -34, 33, -32, 36, 64, -28, 64)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-38, 64, -34, -64, 30, -64, 64, -26, 64, 64)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 64, -64, -34, -37, -35, -30, -64, 38, -64, 35, -39, 64, -37, 64, 64)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 64, -64, -64, -64, -26, 64, -24, 64, 26, 28, 24, 31, 64)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 28, -64, -64, -64, -26, 64, -24, 64, 64, -22, 64, -28, 29)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -20, -33, -28, -21, -64, 30, -64, 34, 64, -64, 64)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 30, -64, 36, -34, 64, -25, 64, 64, -33, 64, -30, 33, -64, 35)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-25, -22, 64, -19, 64, 64, -27, 64)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -23, 64, -19, 64, 64, -64, 64)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -23, 22, -23, 21, 64, -64, 64)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-41, -64, 37, -64, 40, 64, -42, 64)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31, -64, 31, -64, 64, -27, 64, 32, 36, 64, -28, 64)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 21, -64, -29, -31, -64, 35, -64, 36, 64, -28, 64)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-38, 64, -34, -64, 64, -64, 64, 33, 38, 64)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 23, -64, -64, 64, -64, 64, 31, 30, 32, 28, 64, -29, 64, -33, 26)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 23, -64, -64, 32, -64, 39, -42, 64, -39, 64, 26)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 23, -64, -30, -34, -34, -25, -64, 64, -64, 64, 26, -33, 26)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 25, -64, 34, 64, -21, 64, -27, 35, -64, 31)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -26, -20, -64, 64, -64, 64, 16, 28, 26, 14, 64, -64, 64)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-28, -64, 64, -64, 64, 64, -27, 64)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 24, -64, 21, 64, -64, 64)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-41, -64, 37, -64, 40, 64, -42, 64)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-31, -64, 31, -64, 64, -27, 64, 32, -25, 33)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 32, -64, -29, -31, -64, 35, -64, 29, 31)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-38, 64, -34, 31, -64, 22, -64, -31, -42, -37, -34, -64, 38, -64, 64, -37, 64, -64, 64, 64)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 64, -64, -31, -42, -37, -34, -64, 38, -64, 64, -37, 64, -64, 64, 40, 39, 37, 37, 64)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 23, -64, -30, 64, -30, 64, 31, 30, 32, 28, 64, -29, 64, -33, 26)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 23, -64, -30, -34, -34, -25, -64, 26, -64, 36, -38, 64, -30, 64, 31, 30, 32, 28, 64, -29, 64, -33, 26)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 23, -64, -30, -34, -34, -25, -64, 64, -64, 64, 64, -29, 64, -33, 26)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 21, -64, 29, -29, 64, -23, 64, 16, 28, 26, 14, 64, -64, 64)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-26, -64, 64, -64, 64, 31, -31.089, 34.2847)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 31, -64, 28)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 24, -64, 23, 22, -64, 28)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-37, -42, 64, -36, 64, 41, -36, 42)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -34, 64, -36, 64, 41, -64, 37)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -34, 28, -37, 32, 39, -64, 37)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-38, 64, -34, 31, -64, 22, -64, -31, -42, -37, -34, -64, 64, -64, 64, 33, 38, 64)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 28, -64, -64, 38, -64, 35, -39, 64, -37, 64, 40, 39, 37, 37, 64, -26, 64)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 28, -64, -34, -37, -35, -30, -64, 38, -64, 35, -39, 64, -37, 64, 40)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-38, -36, 29, -38, 34, 35, -37, 35)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 21, -64, 29, -29, 64, -23, 64, 64, -64, 64)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -18, -37, -33, -18, -64, 64, -64, 64, 64, -64, 64)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 19, 30.8054, 28.3676, 26, 64, -64, 64)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -19, 64, -31.089, 34.2847, -64, 24)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ld4s"]
texture = ExtResource("2_01rbm")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-36, -64, 40, -64, 38, 64, -37, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-38, -37, 64, -38, 64, 40, 34, 41, 38, 64, -37, 64)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -37, 39, -39, 37, 64, -41, 64, -45, 39, -64, 37)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-36, -64, 40, -64, 38, 64, -37, 64)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-38, -64, 38, -64, 37, -35, 64, -34, 64, 40, 34, 41, 38, 64, -37, 64)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -37, -43, -41, -38, -64, 38, -64, 42, 64, -38, 64, -39, 41, -64, 37)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-36, -64, 40, -64, 38, 64, -37, 64)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-38, -64, 38, -64, 37, -35, 64, -34, 64, 37, -37, 39)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -37, -43, -41, -38, -64, 38, -64, 40, 40, -64, 37)
3:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -37, 64, -41, 64, 41, -64, 37)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -37, 64, -41, 64, 41, -64, 37)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -37, 64, -41, 64, 41, -64, 37)

[sub_resource type="TileSet" id="TileSet_tmqn7"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_upn4i")
sources/1 = SubResource("TileSetAtlasSource_0ld4s")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fy0jd"]
size = Vector2(65.1606, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2aqg"]
size = Vector2(65.1606, 24.3418)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pa5fq"]
size = Vector2(65.1606, 29.8223)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vij2"]
size = Vector2(65.1606, 35.8722)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wwe25"]
size = Vector2(65.1606, 38.8972)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6xij"]
size = Vector2(65.1606, 41.5128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hq0i3"]
size = Vector2(271.462, 396.054)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_vw5g5"]

[node name="Nonsensical2dTilset" type="Node2D"]
position = Vector2(1560, -838)
scale = Vector2(0.906443, 0.906443)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAJAAIAAQABAAIAAAAKAAIAAQABAAMAAAALAAIAAQABAAMAAAAMAAIAAQABAAMAAAANAAIAAQABAAMAAAAOAAIAAQABAAMAAAAPAAIAAQABAAMAAAAJAAEAAQACAAAAAAAIAAEAAQABAAIAAAAIAAAAAQACAAAAAAAHAAAAAQABAAIAAAAHAP//AQACAAAAAAAGAP//AQABAAEAAAAGAP7/AQACAAAAAAAFAP7/AQABAAMAAAAEAP7/AQABAAMAAAADAP7/AQABAAMAAAAGAAAAAQAAAAIAAAA=")
tile_set = SubResource("TileSet_tmqn7")

[node name="procedural" parent="." instance=ExtResource("3_r70sj")]
position = Vector2(1659.23, 72.8121)
scale = Vector2(0.23, 0.23)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(2046.46, 291.248, 2140.23, 261.462, 2166.71, 269.184, 2237.32, 234.984, 2261.59, 242.707, 2342.12, 167.688, 2392.87, 190.856, 2442.51, 93.7731, 2498.78, 122.457, 2512.02, 63.9864, 2591.45, 63.9864, 2587.04, 312.209, 2200.91, 345.306, 2050.87, 337.583, 2014.47, 311.106)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2623.44, 67.296)
shape = SubResource("RectangleShape2D_fy0jd")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2687.43, 56.2639)
shape = SubResource("RectangleShape2D_fy0jd")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2751.41, 40.8189)
shape = SubResource("RectangleShape2D_fy0jd")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2815.4, 22.0643)
shape = SubResource("RectangleShape2D_fy0jd")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2878.28, 0.0355401)
shape = SubResource("RectangleShape2D_c2aqg")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2942.27, -25.9077)
shape = SubResource("RectangleShape2D_pa5fq")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(3006.26, -57.0824)
shape = SubResource("RectangleShape2D_7vij2")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(3070.24, -93.0792)
shape = SubResource("RectangleShape2D_wwe25")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(3134.23, -131.487)
shape = SubResource("RectangleShape2D_v6xij")

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("coll_source")]
script = ExtResource("4_xiubp")
coll_source = NodePath("../CollisionPolygon2D")

[node name="Polygon2D2" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
position = Vector2(2621.23, 66.1928)
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D")

[node name="Polygon2D3" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D2")

[node name="Polygon2D4" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D3")

[node name="Polygon2D5" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D4")

[node name="Polygon2D6" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D5")

[node name="Polygon2D7" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D6")

[node name="Polygon2D8" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D7")

[node name="Polygon2D9" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D8")

[node name="Polygon2D10" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D9")

[node name="Polygon2D11" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D10")

[node name="Polygon2D12" type="Polygon2D" parent="StaticBody2D" node_paths=PackedStringArray("cool_shape")]
script = ExtResource("5_4uunn")
cool_shape = NodePath("../CollisionShape2D11")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(278.004, -82.7408)
shape = SubResource("RectangleShape2D_hq0i3")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(272.494, -418.118)
shape = SubResource("RectangleShape2D_hq0i3")

[node name="Area2D" type="Area2D" parent="." node_paths=PackedStringArray("teleport_to")]
position = Vector2(838.442, -202.991)
script = ExtResource("6_hjedw")
teleport_to = NodePath("Marker2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(982.963, 640.967)
shape = SubResource("WorldBoundaryShape2D_vw5g5")

[node name="Marker2D" type="Marker2D" parent="Area2D"]
position = Vector2(808.655, 340.893)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4

[node name="menu" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -317.0
offset_bottom = 66.0
grow_horizontal = 0
script = ExtResource("8_80gbj")

[node name="PanelContainer" type="VBoxContainer" parent="CanvasLayer/Control/menu"]
layout_mode = 2
offset_right = 317.0
offset_bottom = 66.0
alignment = 1

[node name="teleport_to_begin" type="Button" parent="CanvasLayer/Control/menu/PanelContainer"]
layout_mode = 2
text = "Teleport to beginning"

[node name="animation_componenet" parent="CanvasLayer/Control/menu/PanelContainer/teleport_to_begin" instance=ExtResource("7_kg2a7")]

[node name="procedural" type="Button" parent="CanvasLayer/Control/menu/PanelContainer"]
layout_mode = 2
text = "Full procedural walk"

[node name="animation_componenet" parent="CanvasLayer/Control/menu/PanelContainer/procedural" instance=ExtResource("7_kg2a7")]

[node name="animationik" type="Button" parent="CanvasLayer/Control/menu/PanelContainer"]
layout_mode = 2
text = "Animation, ik foots and step solver walk"

[node name="animation_componenet" parent="CanvasLayer/Control/menu/PanelContainer/animationik" instance=ExtResource("7_kg2a7")]

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="pressed" from="CanvasLayer/Control/menu/PanelContainer/teleport_to_begin" to="CanvasLayer/Control/menu" method="_on_teleport_to_begin_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/menu/PanelContainer/procedural" to="CanvasLayer/Control/menu" method="_on_procedural_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/menu/PanelContainer/animationik" to="CanvasLayer/Control/menu" method="_on_animationik_pressed"]
